# tiqets-order-processor

./: .env.example  .gitignore  Justfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: changelog-config.json
.github/workflows/: ci.yml  deployment.yml  release.yml
backend/: README.md  alembic.ini  main.py  pytest.ini
backend/app/: __init__.py
backend/app/api/: __init__.py  errors.py  routes.py
backend/app/core/: config.py
backend/app/models/: models.py
backend/app/schemas/: __init__.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 87acfc8a0055_initial_migration.py
backend/src/: exceptions.py
backend/src/data_processing/: __init__.py  loader.py  processor.py  validator.py
backend/src/utils/: logger.py
backend/tests/: conftest.py
backend/tests/test_api/: test_routes.py
backend/tests/test_data_processing/: test_loader.py  test_processor.py  test_validator.py
backend/tests/test_models/: test_models.py
backend/tools/: main.py
data/output/: processed_orders.csv
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docs/: README.md  api_endpoints.md  dev_and_deployment.md  testing_guide.md
docs/ci_cd/: ci_cd.md
docs/data_model/: README.md  Tiqets Order Processing Data Model2.drawio
docs/system_architecture/: system_architecture.drawio  system_architecture.md
frontend/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Layout.jsx  TopCustomers.jsx  UnusedBarcodes.jsx
frontend/src/pages/: Dashboard.jsx
(+1 files in other folders)
